@@ -17,6 +17,9 @@ module NewRenderTestHelper
   end
 end
 
+class LabellingFormBuilder < ActionView::Helpers::FormBuilder
+end
+
 class NewRenderTestController < ActionController::Base
   layout :determine_layout
 
@@ -136,7 +139,15 @@ class NewRenderTestController < ActionController::Base
   def partial_with_locals
     render :partial => "customer", :locals => { :customer => Customer.new("david") } 
   end
+
+  def partial_with_form_builder
+    render :partial => ActionView::Helpers::FormBuilder.new(:post, nil, @template, nil, Proc.new {})
+  end
   
+  def partial_with_form_builder_subclass
+    render :partial => LabellingFormBuilder.new(:post, nil, @template, nil, Proc.new {})
+  end
+
   def partial_collection
     render :partial => "customer", :collection => [ Customer.new("david"), Customer.new("mary") ]
   end
@@ -683,6 +694,18 @@ EOS
   def test_partial_with_locals
     get :partial_with_locals
     assert_equal "Hello: david", @response.body
+  end
+
+  def test_partial_with_form_builder
+    get :partial_with_form_builder
+    assert_match(/<label/, @response.body)
+    assert_template('test/_form')
+  end
+
+  def test_partial_with_form_builder_subclass
+    get :partial_with_form_builder_subclass
+    assert_match(/<label/, @response.body)
+    assert_template('test/_labelling_form')
   end
 
   def test_partial_collection
