@@ -1,0 +1,1 @@
+<%= labelling_form.label :title %>
